# To_do-

./: .gitignore  CLI.py  Ola Gjeilo - Ave Generosa-MI0ijoJgx5k.webm  README.md  To_do_list.py  gui.py  pyproject.toml  todo_text_file.txt  todolist_fanctions.py  web.py
